--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
   "python.formatting.provider": "black",
   "cSpell.words": [
     "cooldown",
-    "Ravendawn"
+    "Opencv",
+    "Ravendawn",
+    "Trackbar",
+    "trackbars"
   ]
 }
