--- a/src/config.yaml
+++ b/src/config.yaml
@@ -8,3 +8,27 @@ hotkeys:
     north_east: e
     south_west: z
     south_east: c
+
+spells:
+  increase_stamina:
+    spell_one: 
+      hotkey: f5
+      priority: 2
+      needs_casting: False
+    spell_two: 
+      hotkey: 4
+      priority: 1
+      needs_casting: False
+      
+  needs_stamina:
+    spell_one:
+      hotkey: 1
+      needs_casting: False
+    spell_two:
+      hotkey: 2
+      priority: 2
+      needs_casting: False
+    spell_three:
+      hotkey: 3
+      priority: 3
+      needs_casting: True
