--- a/src/config.yaml
+++ b/src/config.yaml
@@ -30,20 +30,26 @@ spells:
       target_anchor: ".\\src\\target\\spells\\spirit-rangers.jpg"
 
   needs_stamina:
-    - hotkey: "1"
+    - hotkey: "2"
       priority: 1
+      needs_casting: False
+      cast_time: 0
+      target_anchor: ".\\src\\target\\spells\\dragons-arrow.jpg"
+
+    - hotkey: "1"
+      priority: 2
       needs_casting: False
       cast_time: 0
       target_anchor: ".\\src\\target\\spells\\precision-shot.jpg"
 
-    - hotkey: "2"
-      priority: 2
+    - hotkey: "5"
+      priority: 3
       needs_casting: False
       cast_time: 0
       target_anchor: ".\\src\\target\\spells\\viper-arrow.jpg"
 
     - hotkey: "f5"
-      priority: 3
+      priority: 4
       needs_casting: False
       cast_time: 0
       target_anchor: ".\\src\\target\\spells\\wind-arrow.jpg"
