chore: new cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
   "cSpell.words": [
     "cooldown",
     "Opencv",
+    "ptypes",
+    "pymem",
     "Ravendawn",
     "Trackbar",
     "trackbars"
