core<config>: update target anchor for spells on config file

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -4,6 +4,12 @@ toolbar_position:
   - 850
   - 150
 
+gathering_position:
+  - 640
+  - 300
+  - 500
+  - 180
+
 hotkeys:
   movement:
     north: w
@@ -21,36 +27,36 @@ spells:
       priority: 2
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\wind-arrow.jpg"
+      target_anchor: ".\\target\\spells\\wind-arrow.jpg"
 
     - hotkey: "4"
       priority: 1
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\spirit-rangers.jpg"
+      target_anchor: ".\\target\\spells\\spirit-rangers.jpg"
 
   needs_stamina:
     - hotkey: "2"
       priority: 1
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\dragons-arrow.jpg"
+      target_anchor: ".\\target\\spells\\dragons-arrow.jpg"
 
     - hotkey: "1"
       priority: 2
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\precision-shot.jpg"
+      target_anchor: ".\\target\\spells\\precision-shot.jpg"
 
     - hotkey: "5"
       priority: 3
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\viper-arrow.jpg"
+      target_anchor: ".\\target\\spells\\viper-arrow.jpg"
 
     - hotkey: "f5"
       priority: 4
       needs_casting: False
       cast_time: 0
-      target_anchor: ".\\src\\target\\spells\\wind-arrow.jpg"
+      target_anchor: ".\\target\\spells\\wind-arrow.jpg"
       
