--- a/src/cavebot/ravencrest.yaml
+++ b/src/cavebot/ravencrest.yaml
@@ -1,8 +1,36 @@
 - !!python/tuple
-  - 5160
-  - 5103
-  - 6
+  - 5111
+  - 5072
+  - 7
 - !!python/tuple
-  - 5125
-  - 5103
-  - 6
+  - 5122
+  - 5065
+  - 7
+- !!python/tuple
+  - 5126
+  - 5055
+  - 7
+- !!python/tuple
+  - 5140
+  - 5042
+  - 7
+- !!python/tuple
+  - 5157
+  - 5051
+  - 7
+- !!python/tuple
+  - 5166
+  - 5070
+  - 7
+- !!python/tuple
+  - 5138
+  - 5064
+  - 7
+- !!python/tuple
+  - 5129
+  - 5067
+  - 7
+- !!python/tuple
+  - 5110
+  - 5072
+  - 7
